--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,66 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
     android:orientation="vertical"
-    android:scrollbars = "vertical"
-    tools:context=".DangKyActivity">
+    android:scrollbars = "vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
         android:orientation="vertical"
         android:scrollbars = "vertical"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        tools:context=".DangKyActivity">
+        android:layout_margin="10dp">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="79dp">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/ic_baseline_location_on_24" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:text="Địa chỉ của bạn >>"
             android:textColor="#000"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
 
         <Button
             android:id="@+id/btnTrangCaNhan"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="120dp"
-            android:layout_marginTop="20dp"
             android:background="@drawable/ic_baseline_account_circle_24" />
     </LinearLayout>
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
         <EditText
-            android:id="@+id/editTextTextPersonName2"
-            android:layout_width="344dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity=""
-            android:ems="10"
+            android:theme="@style/editSearch"
+            android:layout_width="wrap_content"
             android:hint="Tìm nhà hàng , món ăn bạn thích"
-            android:inputType="textPersonName" />
-    <Button
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/ic_baseline_search_24"/>
-
+            android:fontFamily="@font/poppinregular"
+            android:layout_marginLeft="10dp"
+            android:imeOptions="actionSearch"
+            android:id="@+id/edtsearch"
+            android:enabled="true"
+            android:drawableLeft="@drawable/ic_baseline_search_24"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
     <LinearLayout
@@ -86,6 +71,33 @@
             android:orientation="horizontal">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/cv2"
+            app:cardCornerRadius="6dp"
+            android:layout_margin="16dp">
+
+            <com.smarteist.autoimageslider.SliderView
+                android:id="@+id/imageSlider"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                app:sliderAnimationDuration="600"
+                app:sliderAutoCycleDirection="back_and_forth"
+                app:sliderAutoCycleEnabled="true"
+                app:sliderIndicatorAnimationDuration="600"
+                app:sliderIndicatorGravity="center_horizontal|bottom"
+                app:sliderIndicatorMargin="15dp"
+                app:sliderIndicatorOrientation="horizontal"
+                app:sliderIndicatorPadding="3dp"
+                app:sliderIndicatorRadius="2dp"
+                app:sliderIndicatorSelectedColor="#5A5A5A"
+                app:sliderIndicatorUnselectedColor="#FFF"
+                app:sliderScrollTimeInSec="1"
+                app:sliderStartAutoCycle="true" />
+
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
     android:layout_width="match_parent"
@@ -171,11 +183,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="Món Ngon Quanh Bạn"
+            android:layout_marginTop="10dp"
+            android:text="Sáng Nay Bạn Muốn Ăn Gì ?"
             android:textStyle="bold"
             android:textColor="#000"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginLeft="10dp"
+            android:fontFamily="@font/poppinsbold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_1"
