--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="resend">#F44336</color>
 
     <color name="intro_title_color">#000000</color>
+    <color name="colorPrimaryTransparent">#b84e277a</color>
+    <color name="grey_200">#eeeeee</color>
+    <color name="xam">#BEBEC7</color>
 
     <!--Color for button next :)-->
     <color name="gradient_startColor" tools:ignore="MissingDefaultResource">#4c84ff</color>
