--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,5 +8,45 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
+    <!--Search-->
+    <style name="editSearch" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorSecondary">#666666</item>
+    </style>
+    <!--Floatingbutton-->
+    <style name="floatingbutton">
+        <item name="colorPrimary">#ff6f00</item>
+        <item name="colorPrimaryVariant">#3700B3</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">#ff6f00</item>
+        <item name="colorSecondaryVariant">#018786</item>
+        <item name="colorOnSecondary">@color/white</item>
+    </style>
+    <!--Detail.ToolbarTitle.Expanded-->
+    <style name="Detail.ToolbarTitle.Expanded" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <!-- Home.Text.SectionTitle -->
+    <style name="Home.Text.SectionTitle" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+    </style>
+    <!-- Clear -->
+    <style name="clear" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">#FA5258</item>
+        <item name="colorPrimaryVariant">@color/cam</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">#D3D3D3</item>
+        <item name="colorSecondaryVariant">#018786</item>
+        <item name="colorOnSecondary">@color/black</item>
+    </style>
 
 </resources>
