--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:scrollbars = "vertical">
+    android:scrollbars="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars = "vertical"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:paddingBottom="300dp">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Địa chỉ của bạn >>"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
-
-        <Button
-            android:id="@+id/btnTrangCaNhan"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="120dp"
-            android:background="@drawable/ic_baseline_account_circle_24" />
-    </LinearLayout>
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-        <EditText
-            android:theme="@style/editSearch"
-            android:layout_width="wrap_content"
-            android:hint="Tìm nhà hàng , món ăn bạn thích"
-            android:fontFamily="@font/poppinregular"
-            android:layout_marginLeft="10dp"
-            android:imeOptions="actionSearch"
-            android:id="@+id/edtsearch"
-            android:enabled="true"
-            android:drawableLeft="@drawable/ic_baseline_search_24"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-    <LinearLayout
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content">
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="20dp"
-         android:text="Chương Trình Khuyến Mãi"
-         android:textColor="#000"
-         android:textSize="20sp" />
-
-    </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginBottom="10dp">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Địa chỉ của bạn >>"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
+
+            <Button
+                android:id="@+id/btnTrangCaNhan"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="120dp"
+                android:background="@drawable/ic_baseline_account_circle_24" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:theme="@style/editSearch"
+                android:layout_width="wrap_content"
+                android:hint="Tìm nhà hàng , món ăn bạn thích"
+                android:fontFamily="@font/poppinregular"
+                android:layout_marginLeft="10dp"
+                android:imeOptions="actionSearch"
+                android:id="@+id/edtsearch"
+                android:enabled="true"
+                android:drawableLeft="@drawable/ic_baseline_search_24"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="Chương Trình Khuyến Mãi"
+                    android:textColor="#000"
+                    android:textSize="20sp" />
+
+        </LinearLayout>
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rcv"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+<!--        </androidx.recyclerview.widget.RecyclerView>-->
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -96,91 +97,100 @@
                 app:sliderIndicatorUnselectedColor="#FFF"
                 app:sliderScrollTimeInSec="1"
                 app:sliderStartAutoCycle="true" />
-
         </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="@drawable/burger" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:textColor="#000"
-            android:background="@color/cam"
-            android:text="Cơm"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="@drawable/fastfood" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:textColor="#000"
-            android:background="@color/cam"
-            android:text="Trà Sữa"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="@drawable/moneybag1" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:textColor="#000"
-            android:background="@color/cam"
-            android:text="Bún/Phở"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="@drawable/introso3" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:textColor="#000"
-            android:background="@color/cam"
-            android:text="Ăn Vặt"/>
-    </LinearLayout>
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:orientation="vertical">-->
+<!--                        <ImageView-->
+<!--                            android:layout_width="80dp"-->
+<!--                            android:layout_height="80dp"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            android:background="@drawable/burger" />-->
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:textSize="20dp"-->
+<!--                            android:gravity="center"-->
+<!--                            android:textColor="#000"-->
+<!--                            android:background="@color/cam"-->
+<!--                            android:text="Cơm"/>-->
+<!--                </LinearLayout>-->
 
-</LinearLayout>
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:orientation="vertical">-->
+<!--                        <ImageView-->
+<!--                            android:layout_width="80dp"-->
+<!--                            android:layout_height="80dp"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            android:background="@drawable/fastfood" />-->
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:textSize="20dp"-->
+<!--                            android:gravity="center"-->
+<!--                            android:textColor="#000"-->
+<!--                            android:background="@color/cam"-->
+<!--                            android:text="Trà Sữa"/>-->
+<!--                </LinearLayout>-->
+
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:orientation="vertical">-->
+<!--                        <ImageView-->
+<!--                            android:layout_width="80dp"-->
+<!--                            android:layout_height="80dp"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            android:background="@drawable/moneybag1" />-->
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:textSize="20dp"-->
+<!--                            android:gravity="center"-->
+<!--                            android:textColor="#000"-->
+<!--                            android:background="@color/cam"-->
+<!--                            android:text="Bún/Phở"/>-->
+<!--                </LinearLayout>-->
+
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:orientation="vertical">-->
+<!--                        <ImageView-->
+<!--                            android:layout_width="80dp"-->
+<!--                            android:layout_height="80dp"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            android:background="@drawable/introso3" />-->
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:textSize="20dp"-->
+<!--                            android:gravity="center"-->
+<!--                            android:textColor="#000"-->
+<!--                            android:background="@color/cam"-->
+<!--                            android:text="Ăn Vặt"/>-->
+<!--                </LinearLayout>-->
+
+<!--        </LinearLayout>-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvhome"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <TextView
+            android:id="@+id/txtslogan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -191,13 +201,19 @@
             android:layout_marginLeft="10dp"
             android:fontFamily="@font/poppinsbold" />
 
-        <androidx.recyclerview.widget.RecyclerView
+        <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="20dp">
+        </androidx.recyclerview.widget.RecyclerView>-->
 
-        </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvmonan"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
     </LinearLayout>
 </ScrollView>
 
