--- a/app/src/main/res/layout/activity_trang_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_trang_ca_nhan.xml
@@ -1,61 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:scrollbars="vertical"
+    android:background="@color/white"
     tools:context=".View.User.TrangCaNhan">
-
-    <Button
-        android:id="@+id/btnOut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Đăng Xuất"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
-
-    <Button
-        android:id="@+id/btnUpdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sửa đổi thông tin"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.109" />
-
-    <Button
-        android:id="@+id/btnThemDuLieu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Thêm dữ liệu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="304dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.962">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="30dp">
 
-        <ListView
-            android:id="@+id/lvUsers"
+        <TextView
+            style="@style/viewParent.headerText"
+            android:text="@string/caidat" />
+
+        <RelativeLayout
+            android:id="@+id/edtEditProfile"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/profileCircleImageView"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="10dp"
+                android:src="@mipmap/ic_logo1"/>
+
+            <TextView
+                android:id="@+id/usernameTextView"
+                style="@style/viewParent.headerText"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@id/profileCircleImageView"
+                android:text="Duc Thien"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/email"
+                style="@style/viewParent.headerText"
+                android:layout_below="@id/usernameTextView"
+                android:fontFamily="@font/calibri_regular"
+                android:textSize="16sp"
+                android:layout_toRightOf="@id/profileCircleImageView"
+                android:text="buiducthien.dtu@gmail.com"
+                android:textColor="#5D5C5C"/>
+
+            <ImageView
+                style="@style/viewParent"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_more" />
+
+        </RelativeLayout>
+
+        <Switch
+            android:id="@+id/darkModeSwitch"
+            style="@style/settingsText"
+            android:drawableLeft="@drawable/ic_dark_mode"
+            android:checked="false"
+            android:text="Dark Mode" />
+
+        <TextView
+            style="@style/viewParent.headerText.settingsMiniTitle"
+            android:text="Profile" />
+
+        <TextView
+            android:id="@+id/txteditprofile"
+            style="@style/viewParent.headerText.settingsTextIcon"
+            android:drawableLeft="@drawable/ic_edit_profile"
+            android:text="Chỉnh Sửa Thông Tin Người Dùng" />
+
+        <TextView
+            android:id="@+id/txtchangepassword"
+            style="@style/viewParent.headerText.settingsTextIcon"
+            android:layout_marginTop="10dp"
+            android:drawableLeft="@drawable/ic_edit_password"
+            android:text="Thay Đổi Mật Khẩu" />
+
+        <TextView
+            android:id="@+id/txtMesenger"
+            style="@style/viewParent.headerText.settingsTextIcon"
+            android:layout_marginTop="10dp"
+            android:drawableLeft="@drawable/messenger"
+            android:text="Nhắn Tin" />
+
+        <TextView
+            style="@style/viewParent.headerText.settingsMiniTitle"
+            android:text="Notifications" />
+
+        <Switch
+            style="@style/settingsText"
+            android:checked="true"
+            android:drawableLeft="@drawable/ic_notifications"
+            android:text="Thông Báo" />
+
+        <TextView
+            style="@style/viewParent.headerText.settingsMiniTitle"
+            android:text="Regional" />
+
+        <TextView
+            android:id="@+id/history"
+            style="@style/viewParent.headerText.settingsTextIcon"
+            android:drawableLeft="@drawable/icons8_order_history_30px"
+            android:text="Lịch Sử Đơn Hàng" />
+        <TextView
+            android:id="@+id/map"
+            style="@style/viewParent.headerText.settingsTextIcon"
+            android:drawableLeft="@drawable/icons8_maps_48px"
+            android:text="Map" />
+        <TextView
+            android:id="@+id/txtlogout"
+            style="@style/viewParent.headerText.settingsTextIcon"
+            android:drawableLeft="@drawable/ic_logout"
+            android:text="Logout" />
+
+
+        <TextView
+            style="@style/viewParent.headerText.settingsMiniTitle"
+            android:gravity="center_horizontal"
+            android:text="App ver 2.0.1"
+            android:textAlignment="center" />
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
