add img in profile =))

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,16 +24,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Địa chỉ của bạn >>"
+                android:layout_gravity="center"
                 android:textColor="#000"
                 android:textSize="20sp"
                 android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
 
-            <Button
-                android:id="@+id/btnTrangCaNhan"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="120dp"
-                android:background="@drawable/ic_baseline_account_circle_24" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/anhdaidien"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:civ_border_width="5dp"
+                app:civ_border_color="#fff"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/avatar"
+                android:layout_marginLeft="100dp"/>
         </LinearLayout>
 
         <LinearLayout
