--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -83,6 +83,18 @@
             android:text="@string/gui"
             android:textColor="#000000"
             android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"/>
+        <Button
+            android:id="@+id/btnQuayLai"
+            android:layout_width="264dp"
+            android:layout_height="38dp"
+            android:layout_gravity="center"
+            android:background="@drawable/border_item"
+            android:gravity="center"
+            android:text="Quay lại"
+            android:textColor="#000000"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <ProgressBar
