--- a/app/src/main/res/layout/activity_trang_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_trang_ca_nhan.xml
@@ -140,6 +140,7 @@
 
 
         <TextView
+            android:id="@+id/txtVersion"
             style="@style/viewParent.headerText.settingsMiniTitle"
             android:gravity="center_horizontal"
             android:text="App ver 2.0.1"
