--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginBottom="10dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/txtdiachi"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="Địa chỉ của bạn >>"
-                android:layout_gravity="center"
+                android:layout_gravity="left"
                 android:textColor="#000"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -35,9 +37,8 @@
                 android:layout_height="50dp"
                 app:civ_border_width="5dp"
                 app:civ_border_color="#fff"
-                android:layout_gravity="center_horizontal"
                 android:src="@drawable/avatar"
-                android:layout_marginLeft="100dp"/>
+                android:layout_gravity="right"/>
         </LinearLayout>
 
         <LinearLayout
