sua loi phan thanh toan

--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -5,11 +5,35 @@
     android:id="@+id/linearbackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThanhToanActivity">
+    tools:context=".View.FavoriteActivity">
+
+    <RelativeLayout
+        android:id="@+id/toolbaryeuthich"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:padding="10dp">
+        <TextView
+            android:id="@+id/toolbar_title_yeuthich"
+            style="@style/viewParent.headerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+            android:text="Món Ăn Yêu Thích"
+            android:layout_marginTop="2.7dp"/>
+
+        <ImageView
+            android:id="@+id/backyeuthich"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="0dp"
+            android:src="@drawable/ic_arrow_back_black1_24dp" />
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvcart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_below="@+id/toolbaryeuthich"/>
 </RelativeLayout>
