--- a/app/src/main/res/layout/activity_food_product.xml
+++ b/app/src/main/res/layout/activity_food_product.xml
@@ -7,6 +7,30 @@
     tools:context=".FoodProductActivity"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:padding="10dp">
+        <TextView
+            android:id="@+id/toolbar_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+            android:text="Danh sách món ăn"
+            android:layout_marginTop="2.7dp"/>
+
+        <ImageView
+            android:id="@+id/backDSMA"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/ic_arrow_back_black1_24dp" />
+    </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvfood"
         android:layout_width="match_parent"
