--- a/app/src/main/res/layout/activity_food_profile.xml
+++ b/app/src/main/res/layout/activity_food_profile.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:layout_margin="10dp">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -243,9 +239,14 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 android:layout_marginTop="40dp"
+
                 app:layout_constraintTop_toBottomOf="@id/rv_reviews"
                 tools:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.core.widget.NestedScrollView>
+
+
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</ScrollView>
