--- a/app/src/main/res/layout/item_categorieshome.xml
+++ b/app/src/main/res/layout/item_categorieshome.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="80dp"
     android:layout_height="125dp"
     app:cardBackgroundColor="#FFF"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="2.5dp"
     app:cardCornerRadius="200dp"
-    android:id="@+id/card_view1"
-    >
+    android:id="@+id/card_view1">
 
     <LinearLayout
         android:id="@+id/line1"
@@ -21,7 +21,9 @@
             android:id="@+id/card_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"></androidx.cardview.widget.CardView>
+            android:visibility="gone">
+
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
