--- a/app/src/main/res/layout/activity_trang_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_trang_ca_nhan.xml
@@ -140,6 +140,11 @@
             android:drawableLeft="@drawable/icon_cart"
             android:text="Đơn Hàng" />
         <TextView
+            android:id="@+id/txtGioHang"
+            style="@style/viewParent.headerText.settingsTextIcon"
+            android:layout_marginStart="60dp"
+            android:text="Giỏ Hàng" />
+        <TextView
             android:id="@+id/map"
             style="@style/viewParent.headerText.settingsTextIcon"
             android:drawableLeft="@drawable/icons8_maps_48px"
