--- a/app/src/main/res/layout/dulieusach.xml
+++ b/app/src/main/res/layout/dulieusach.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -50,7 +50,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingStart="20dp"
-        android:background="#fff"
+        android:background="#3e4042"
         android:paddingEnd="20dp">
 
         <RelativeLayout
@@ -134,7 +134,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="#fff"
+            android:background="#3e4042"
             android:gravity="center_vertical">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -147,7 +147,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="#fff"
+            android:background="#3e4042"
             android:gravity="center_vertical">
 
             <ImageView
@@ -163,6 +163,16 @@
                 android:textStyle="bold"
                 android:textColor="#111"
                 android:layout_marginStart="15sp"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quay lại"
+                android:background="@drawable/boggocedt"
+                android:backgroundTint="@color/cam"
+                android:layout_marginStart="20dp"
+                android:id="@+id/quaylai"/>
+
         </LinearLayout>
 
     </LinearLayout>
