--- a/app/src/main/res/layout/activity_food_profile.xml
+++ b/app/src/main/res/layout/activity_food_profile.xml
@@ -38,6 +38,7 @@
                 android:layout_height="240dp"
                 android:src="@drawable/overlay_black_bottom"
                 app:layout_collapseMode="parallax" />
+            <!-- android:src="@drawable/overlay_black_bottom" dùng để overplay phía dưới-->
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -45,6 +46,8 @@
                 android:layout_height="?actionBarSize"
                 android:background="@drawable/bg_transparent_toolbar"
                 app:layout_collapseMode="pin" />
+            <!-- android:background="@drawable/bg_transparent_toolbar" dùng để overplay
+                 phía trên-->
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -237,10 +240,11 @@
                 layout="@layout/layout_connection_problem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
                 android:layout_marginTop="40dp"
+                android:visibility="visible"
 
                 app:layout_constraintTop_toBottomOf="@id/rv_reviews"
+                tools:layout_editor_absoluteX="0dp"
                 tools:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
