Thien da add duoc qr vao

--- a/app/src/main/res/layout/activity_test_qrcode.xml
+++ b/app/src/main/res/layout/activity_test_qrcode.xml
@@ -9,7 +9,7 @@
     <com.budiyev.android.codescanner.CodeScannerView
         android:id="@+id/scanner_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="1700px"
         app:autoFocusButtonColor="@android:color/white"
         app:autoFocusButtonVisible="true"
         app:flashButtonColor="@android:color/white"
@@ -22,4 +22,14 @@
         app:frameSize="0.75"
         app:frameThickness="2dp"
         app:maskColor="#77000000"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1750px"
+        android:id="@+id/testQR"
+        android:textSize="17sp"
+        android:textColor="#FF0000">
+
+    </TextView>
 </FrameLayout>
