--- a/app/src/main/res/layout/activity_food_profile.xml
+++ b/app/src/main/res/layout/activity_food_profile.xml
@@ -72,6 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
+                android:layout_marginBottom="25dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0" />
@@ -80,6 +81,7 @@
                 android:id="@+id/barrier_info_panel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
                 app:barrierDirection="bottom"
                 app:constraint_referenced_ids="layout_image_poster"
                 tools:ignore="UnknownId" />
@@ -88,7 +90,8 @@
                 android:id="@+id/guide_info_panel"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="25dp"
+
                 app:layout_constraintTop_toBottomOf="@id/barrier_info_panel" />
 
             <ImageView
@@ -98,7 +101,9 @@
                 android:adjustViewBounds="true"
                 android:background="@color/grey_200"
                 app:layout_constraintBottom_toBottomOf="@id/guide_info_panel"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                tools:layout_editor_absoluteX="0dp" />
 
             <TextView
                 android:id="@+id/tv_detail_rating"
@@ -200,6 +205,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/layout_image_poster"
                 app:layout_constraintTop_toBottomOf="@id/txtstatus"
+                tools:text="Release Date" />
+            <TextView
+                android:id="@+id/txtTrangthai"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:textColor="@android:color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/layout_image_poster"
+                app:layout_constraintTop_toBottomOf="@id/txtmatl"
                 tools:text="Release Date" />
 
 
