--- a/app/src/main/res/layout/itemfood.xml
+++ b/app/src/main/res/layout/itemfood.xml
@@ -62,6 +62,17 @@
             android:textSize="10sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/txtTrangThai"
+            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:textSize="10sp"
+            android:paddingLeft="5dp"
+            android:fontFamily="sans-serif-condensed-light"
+            android:text="Còn Hàng"
+            android:textColor="#ff0000"
+            android:layout_height="wrap_content"/>
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
