--- a/app/src/main/res/layout/itemfoodprofile.xml
+++ b/app/src/main/res/layout/itemfoodprofile.xml
@@ -53,13 +53,13 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/txtTrangThai"
+            android:id="@+id/txtTrangThaiActivity"
             android:layout_width="wrap_content"
             android:textStyle="bold"
             android:textSize="10sp"
             android:paddingLeft="5dp"
             android:fontFamily="sans-serif-condensed-light"
-            android:text="Còn Hàng"
+            android:text="Test"
             android:textColor="#ff0000"
             android:layout_height="wrap_content"/>
 
