--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -23,14 +23,15 @@
             android:layout_marginTop="5dp"
             android:fontFamily="@font/billabong" />
     </androidx.appcompat.widget.Toolbar>
+
     <ScrollView
-        android:layout_below="@+id/toolbar"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/scrollView"
         android:layout_above="@id/card_view"
-        >
+        android:layout_below="@+id/toolbar"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -44,11 +45,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
-                    android:text="Giao tới"
                     android:fontFamily="@font/poppinregular"
+                    android:gravity="center"
+                    android:text="Giao tới"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -89,11 +90,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
-                    android:text="Tóm tắt đơn hàng"
                     android:fontFamily="@font/poppinregular"
+                    android:gravity="center"
+                    android:text="Tóm tắt đơn hàng"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -101,8 +102,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvcart"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
-                />
+                android:layout_height="280dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -113,11 +114,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/poppinregular"
                     android:text="Phương thức thanh toán"
                     android:textSize="18sp"
-                    android:fontFamily="@font/poppinregular"
                     android:textStyle="bold" />
             </LinearLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -137,6 +139,62 @@
                     android:layout_marginTop="15dp"
                     android:layout_toRightOf="@id/img"/>
             </RelativeLayout>
+
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <RadioGroup-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal">-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="left"-->
+<!--                        android:orientation="horizontal">-->
+
+<!--                        <RadioButton-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:gravity="center"-->
+<!--                            android:text="Ngân Hàng" >-->
+<!--                        </RadioButton>-->
+<!--                        <ImageView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:src="@drawable/bank1"/>-->
+
+<!--                    </LinearLayout>-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="right"-->
+<!--                        android:orientation="horizontal">-->
+
+<!--                        <RadioButton-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:gravity="center"-->
+<!--                            android:text="Tiền mặt" />-->
+
+<!--                        <ImageView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:src="@drawable/money1"-->
+<!--                            android:paddingRight="10dp"-->
+<!--                            android:paddingLeft="10dp"/>-->
+
+<!--                    </LinearLayout>-->
+
+<!--                </RadioGroup>-->
+
+<!--            </LinearLayout>-->
+
         </LinearLayout>
 
     </ScrollView>
