--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -119,81 +119,55 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
-
-            <RelativeLayout
+            <RadioGroup
+                android:id="@+id/rdbGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp">
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp">
+
+                <RadioButton
+                    android:id="@+id/rdbTien"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Tiền mặt"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="13dp"/>
                 <ImageView
-                    android:id="@+id/img"
-                    android:layout_margin="5dp"
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/money"/>
-                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:src="@drawable/money1"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"/>
+
+                <RadioButton
+                    android:id="@+id/rdbNganHang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Ngân Hàng"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="40dp" />
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tiền mặt"
-                    android:textStyle="normal"
-                    android:fontFamily="sans-serif-medium"
-                    android:layout_marginTop="15dp"
-                    android:layout_toRightOf="@id/img"/>
-            </RelativeLayout>
+                    android:src="@drawable/bank1"
+                    android:paddingRight="10dp"
+                    android:paddingTop="2dp"
+                    android:paddingLeft="10dp"/>
+            </RadioGroup>
+            <TextView
+                android:layout_width="300dp"
+                android:id="@+id/txtPayment"
+                android:paddingLeft="20dp"
+                android:theme="@style/AppTheme"
+                android:paddingTop="10dp"
+                android:layout_gravity="center"
+                android:paddingBottom="10dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/boggocedt"
+                android:layout_height="wrap_content" android:visibility="gone"/>
 
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <RadioGroup-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="horizontal">-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:gravity="left"-->
-<!--                        android:orientation="horizontal">-->
-
-<!--                        <RadioButton-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="match_parent"-->
-<!--                            android:gravity="center"-->
-<!--                            android:text="Ngân Hàng" >-->
-<!--                        </RadioButton>-->
-<!--                        <ImageView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:src="@drawable/bank1"/>-->
-
-<!--                    </LinearLayout>-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:gravity="right"-->
-<!--                        android:orientation="horizontal">-->
-
-<!--                        <RadioButton-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="match_parent"-->
-<!--                            android:gravity="center"-->
-<!--                            android:text="Tiền mặt" />-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:src="@drawable/money1"-->
-<!--                            android:paddingRight="10dp"-->
-<!--                            android:paddingLeft="10dp"/>-->
-
-<!--                    </LinearLayout>-->
-
-<!--                </RadioGroup>-->
-
-<!--            </LinearLayout>-->
 
         </LinearLayout>
 
@@ -246,7 +220,7 @@
                 android:layout_marginRight="20dp"
                 android:fontFamily="sans-serif-black"
                 android:backgroundTint="@color/cam"
-                android:text="Thanh Toán" />
+                android:text="Đặt Hàng" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
